<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_menu_clave_valor"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.app.umariana.testespacioclavevalor.MenuClaveValor">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/nombre_mecanismo"
                android:gravity="center"
                android:textStyle="bold"
                android:textSize="25dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="20dp"
                android:text="@string/texto_op" />

            <Button
                android:id="@+id/btn_test0"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/test_0"/>

            <Button
                android:id="@+id/btn_test1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/test_1"/>

            <Button
                android:id="@+id/btn_test2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/test_2"/>

            <Button
                android:id="@+id/btn_test3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/test_3"/>

            <Button
                android:id="@+id/btn_test4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/test_4"/>

        </LinearLayout>

    </ScrollView>

</RelativeLayout>
